

cartography version 1.4.9000 (Release date:)
==============

* Addition of the hexagonal regular grid. 





cartography version 1.4.0 (Release date: 2016-08-25)
==============

Major changes:  

* Introduce getOuterBorders that allows to build borders (as getBorders) between non-contiguous polygons.
* Addition of the theme parameter in layoutLayer to set col and coltitle according to a cartographic palette.
* discretization function become getBreaks. 
* A new discretisation based on mean and standard deviation is added to getBreaks. 
* Addition of colNA parameter in choro* and typo* function to set a color for NA values. 
* k parameter in prop* function is now defunct, using k will stop the function.


Minor changes:  

* As it was a heavy import, SpatialPosition package is back to suggested packages.
* As Jenks and Fisher-Jenks algorithms are based on the same principle and give quite similar results but Fisher-Jenks is much faster, "fisher-jenks" method replaces "jenks" in getBreaks methods.
* In most function, if df is missing then spdf@data is used instead.
* Introduce carto.pal.info() function that gives the list of the cartographic palettes. 
* Addition of two qualitatives color palettes ("pastel.pal"" and "multi.pal").


cartography version 1.3 (Release date: 2016-06-07)
==============

Major changes:  

* Introduce the smoothLayer function, this function computes smoothed maps of potentials. It uses quickStewart from SpatialPosition package.  
* Most of previously suggested packages are now imported.

Minor changes:    

* Introduce the legend.*.values.order parameter in typoLayer, propSymbolsTypoLayer and gradLinkTypoLayer. This parameter allows to order modalities in the legend and eases the color assignement.   
* Change min value in prop*Layer legends.  
* Suppress zero values in propSymb*Layer.
* getGridLayer is faster.
* getLinkLayer is faster.
* getBorders is faster.




cartography version 1.2 (Release date: 2016-02-11)
==============
