@@ -47,7 +47,7 @@
 layoutLayer <- function(title = "Title of the map, year",
                         sources = "Source(s)", author = "Author(s)",
                         col = "black", coltitle = "white", theme = NULL, 
-                        bg = NULL, scale = 0, frame = TRUE, north = FALSE, 
+                        bg = NULL, scale = 0, frame = TRUE, north = TRUE, 
                         south = FALSE, extent = NULL){
   
   if (!is.null(extent)){
@@ -96,11 +96,11 @@ layoutLayer <- function(title = "Title of the map, year",
   
   # NORTH
   if(north==T){
-    north(pos = "topleft")
+    north(pos = "topright")
   }
   
   if(south==T){
-    north(pos = "topleft", south = TRUE)
+    north(pos = "topright", south = TRUE)
   }
   
   
